--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@ console.log(geo.faceVertexUvs[0][i])
           Overhang: overhang,
           BoardThickness: MaterialThickness,
           RenderMode:wireframe,
-          Parts:partMode
+          Parts:function(){partMode=!partMode}
         };
         const datGui  = new dat.GUI({ autoPlace: true });
           datGui.add(params,'Height').onChange(function(nv){
@@ -776,12 +776,7 @@ console.log(geo.faceVertexUvs[0][i])
             createGeom();
           });
 
-          datGui.add(params,'Parts').onChange(function(nv){
-
-            partMode =nv ;
-            console.log(typeof(nv));
-            createGeom();
-          });
+        
            datGui.domElement.id = 'gui'
 
 
