--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ console.log(geo.faceVertexUvs[0][i])
             createGeom();
           });
 
-        
+          datGui.add(params,'Parts')
            datGui.domElement.id = 'gui'
 
 
