--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ if(partMode==true){
 layout(prts);
 return;
 }
+else{
 
 
 side1geometry = new THREE.ExtrudeBufferGeometry(side1,extrudeSettings);
@@ -246,7 +247,7 @@ scene.add(lsidemesh2)
 scene.add(sm2);
 scene.add(basemesh);
 
-
+}
 }
 
 
